k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mentatlab
  labels:
    name: mentatlab
    app: mentatlab
